# lapka

./: .dockerignore  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  README.md  alembic.ini  docker-compose.yml  eslint.config.cjs  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: deploy.yml  quality_gate.yml  quality_gates.yml  smoke.yml
alembic/: env.py
alembic/versions/: 733b95b80ad6_create_milestones_table.py
docs/: architecture.md  controls.md  development.md  releases.md
scripts/: check_templates.py  deploy.sh
src/: __init__.py  app.py  config.py  database.py  main.py  models.py  routes.py  runner.py  sitecustomize.py  slug.py
src/core/: app.py  database.py
src/features/auth/: api.py  middleware.py  security.py
src/features/milestones/: api.py  dto.py  helpers.py
src/features/tags/: api.py
src/milestones/: api.py  commands.py  dto.py  helpers.py  routes.py  services.py  slug.py  tags.py
src/orm/: alembic.ini  milestone.py  milestone_tags.py  tag.py  tags.py
src/static/: styles.css
src/tags/: api.py  services.py
src/templates/: base.html  edit.html  index.html  milestone.html  new.html
src/terminal/: api.py
src/web/: templates.py
tests/: conftest.py  test_auth.py  test_dto.py  test_middleware.py  test_routes.py  test_slug_generation.py  test_tags.py
tests/js/: autocomplete-core.test.js  global-keyboard.test.js  history.test.js  input-mobile.test.js  input.test.js  navigation.test.js  table.test.js  tags.test.js  terminal-autocomplete.test.js
(+36 files in other folders)
