[project]
name = "lapka"
version = "0.1.0"
description = ""
authors = [
    {name = "Katrin Torsunova",email = "to.katrin.t@gmail.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "djlint (>=1.39.2,<2.0.0)"
]
